--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-24  rejon <kidproto@users.sf.net>
+
+	* src/verbs.cpp: I changed the reverse command to be more verbose and 
+	  explanative.
+
 2004-06-24  MenTaLguY  <mental@rydia.net>
 
 	* src/seltrans.cpp: slight change to make showing/hiding center
