--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-06-25  Kees Cook  <kees@outflux.net>
+
+	* src/dialogs/rdf.h, src/dialogs/rdf.cpp, src/dialogs/Makefile_insert,
+      src/dialogs/desktop-properties.cpp:
+
+	  Added data entry widgets for document metadata, including a rough
+	  license selector, and debug rdf generator.
+
 2004-06-25  Carl Hetherington  <inkscape@carlh.net>
 
 	* src/sp-namedview.cpp: cleanups in grid snap settings.  Fix a
