--- a/ChangeLog
+++ b/ChangeLog
@@ -5,7 +5,8 @@
 
 	  Added data entry widgets for document metadata, including a rough
 	  license selector, and debug rdf generator.  Corrected whitespace,
-	  added table for RDF entity lookup, tag, and title mapping.
+	  added table for RDF entity lookup, tag, and title mapping.  Added
+	  initial loading framework.
 
 2004-06-25  Carl Hetherington  <inkscape@carlh.net>
 
