--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-05  Carl Hetherington <inkscape@carlh.net>
+
+	* src/desktop.cpp: prevent crash by adding a check for 
+	layer == NULL to SPDesktopWidget::_buildLayerStatusMenuItem.
+
 2004-07-04  MenTaLguY  <mental@rydia.net>
 
 	* src/sp-object.cpp: fixed bug #979281 -- I had accidentally
