--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-07-06  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/sp-typeset-utils.h: Greatly reduce #includes.
+
+	* src/color-rgba.h, src/Makefile_insert, src/desktop.h:
+	  Move ColorRGBA from desktop.h to new file color-rgba.h.
+	* src/desktop.cpp, src/dropper-context.cpp: #include it.
+
 2004-07-05  Kees Cook  <kees@outflux.net>
 
 	* src/dialogs/desktop-properties.cpp, src/dialogs/rdf.cpp,
