--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-06  Carl Hetherington  <inkscape@carlh.net>
+
+	* src/seltrans.cpp, src/sp-namedview.cpp,
+	src/display/bezier-utils.cpp, src/libnr/nr-types.cpp:
+	isnan appears to need a std:: namespace qualifier.
+
 2004-07-06  Ted Gould  <ted@gould.cx>
 
 	* src/libnr/nr-point.h, src/libnr/nr-rect.h:
