--- a/ChangeLog
+++ b/ChangeLog
@@ -8,7 +8,8 @@
 
 	* src/dialogs/desktop-properties.cpp: added a few g_asserts, and
 	  added a missing sp_signal_disconnect_by_data for the color picker,
-	  which closes bug #975864.
+	  which closes bug #975864.  Stopped accidentally calling
+	  sp_document_done from the update handler (fixes bug #986411).
 	* src/dialogs/dialog-events.cpp, src/helper/action.cpp:
 	  whitespace changes, typo fixes, added a few g_asserts.
 
