--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-08  Carl Hetherington  <inkscape@carlh.net>
+
+	* src/libnrtype/FontFactory.cpp: disable printing of debug
+	messages.
+
 2004-07-07  MenTaLguY  <mental@rydia.net>
 
 	* src/desktop.cpp, src/interface.cpp: remove the word "layer"
